Bug 167643 - Selection is black
Summary: Selection is black
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-07-23 07:18 UTC by nobu
Modified: 2025-12-11 20:28 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-07-23 07:18:17 UTC
Description:
Selection is black.

Steps to Reproduce:
1. Open new Calc.
2. Select Cell range [A1:A2].

Actual Results:
3. The selection is black.
   If anything is entered, you will not see anything.

Expected Results:
3. The selection is a light color and the contents of the cells are visible.


Reproducible: Always


User Profile Reset: No

Additional Info:

This bug also occurs in Writer and Impress.

Reproducible with
[2025-07-23]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded
Comment 1 nobu 2025-07-23 07:23:58 UTC
Not reproduced with
[2025-07-23]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 2; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded
Comment 2 Jessica 2025-07-23 07:48:53 UTC
I can confirm it in

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded

After entering a text the background stays black, but if you click to another cell, cell A1:A2 turn white and the text is visible.

Not repro in 
Version: 25.2.5.2 (X86_64) / LibreOffice Community
Build ID: 03d19516eb2e1dd5d4ccd751a0d6f35f35e08022
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (de_DE); UI: en-US
Calc: threaded
Comment 3 Telesto 2025-07-23 19:31:41 UTC
Confirm
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: nl-NL
Calc: CL threaded
Comment 4 Saburo 2025-07-31 23:40:07 UTC
bibisected with win64-26.2
commit 088a7c7c451321a800ca8d3523a18b6bb93239b7
author	Noel Grandin <noelgrandin@gmail.com>	Tue Sep 24 16:18:11 2024 +0200

remove alpha device from OutputDevice

and render to a combined color+alpha bitmap
Comment 5 Commit Notification 2025-08-05 13:53:21 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9791aaaa31749857e719ab8b6926b180966f959b

tdf#167643 Selection is black

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.