tdf#167643 Selection is black

regression from
    commit 088a7c7c451321a800ca8d3523a18b6bb93239b7
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Tue Sep 24 16:18:11 2024 +0200
    remove alpha device from OutputDevice

I am a little confused here. I would have thought kSrcOver would
be the right blend mode, but instead it is kSrcATop
which produces the "right" answer.

Change-Id: If5bfb0ab139cbed5acaba2cc66c5036ca091818c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188957
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>